--- a/src/app/components/inventor/inventor-income-dialog/inventor-table/inventor-table.component.css
+++ b/src/app/components/inventor/inventor-income-dialog/inventor-table/inventor-table.component.css
@@ -1,3 +1,6 @@
-
+.zednadebisheaderi {
+  font-family: "lbet-mt", sans-serif !important;
+  font-size: 18px;
+}
 
 /*# sourceMappingURL=inventor-table.component.css.map */
