--- a/src/app/views/management/warehouse/warehouse.component.html
+++ b/src/app/views/management/warehouse/warehouse.component.html
@@ -1,4 +1,4 @@
-<app-inventor-income-dialog  header="ინვენტარის მიღება" [dialog]="true"> </app-inventor-income-dialog>
+<app-inventor-income-dialog  header="ინვენტარის მიღება"  *ngIf="inventorDialogShow" [dialog]="inventorDialogShow" (onClose)="closeInventorIncomeDialog($event)"> </app-inventor-income-dialog>
 <p-confirmDialog [style]="{width: '50vw'}" modal="modal"></p-confirmDialog>
 <div class="actionButton">
   <div class="buttonBox" style="width: 150px;">
@@ -470,7 +470,7 @@
   </p-footer>
 </p-dialog>
 
-<p-dialog  header="{{inventorOperation=='edit'? 'ინვენტარის რედაქტირება':(inventorOperation ==='multiple')? 'პაკეტური რედაქტირება':'ინვენტარის მიღება'}}" *ngIf="inventorDialogShow" [(visible)]="inventorDialogShow" [modal]="true" [responsive]="true" [style]="{width: '1200px', minWidth: '200px'}"
+<p-dialog  header="{{inventorOperation=='edit'? 'ინვენტარის რედაქტირება':(inventorOperation ==='multiple')? 'პაკეტური რედაქტირება':'ინვენტარის მიღება'}}" *ngIf="false" [(visible)]="inventorDialogShow" [modal]="true" [responsive]="true" [style]="{width: '1200px', minWidth: '200px'}"
           [maximizable]="true" [draggable]="true" [baseZIndex]="10000">
 
           <p-header>
