--- a/src/app/components/inventor/inventor-income-dialog/inventor-income-dialog-fields/inventor-income-dialog-fields.component.html
+++ b/src/app/components/inventor/inventor-income-dialog/inventor-income-dialog-fields/inventor-income-dialog-fields.component.html
@@ -38,12 +38,14 @@
     </table>
   </div>
 </div>
+
+
 <div class="ui-g ui-fluid" style="height: 300px" *ngIf="!frustrate">
-    <div class="ui-md-3" >
+    <div class="ui-md-2" >
       <p>დასახელება</p>
-      <p-autoComplete   [ngModelOptions]="{standalone: true}"  [(ngModel)]="newInventor.fullname"    [ngClass]="{ 'red':if_error(formErrors,'fullname')?'1px solid red': '' }"  field="name" [size]="30" placeholder="დასახელება" [minLength]="0"  (completeMethod)="onKeyUpName($event)"  [suggestions]="filteredInventorNames"  (onSelect)="selectName($event)"></p-autoComplete>
+      <p-autoComplete [ngModelOptions]="{standalone: true}"  [(ngModel)]="newInventor.fullname"    [ngClass]="{ 'red':if_error(formErrors,'fullname')?'1px solid red': '' }"  field="name" [size]="30" placeholder="დასახელება" [minLength]="0"  (completeMethod)="onKeyUpName($event)"  [suggestions]="filteredInventorNames"  (onSelect)="selectName($event)"></p-autoComplete>
     </div>
-    <div class="ui-g-3">
+    <div class="ui-g-2">
       <p>მარკა</p>
       <table>
         <tr>
@@ -71,7 +73,22 @@
         </tr>
       </table>
     </div>
-    <div class="ui-g-4" *ngIf="newInventor.isCar !==1">
+
+    <div class="ui-g-2">
+      <p>რაოდენობა</p>
+      <input type="text" pInputText placeholder="რაოდენობა" style="width: 100%; height: 33px;" [width]="{ 'width': newInventor.consumption? '100%': '100px'}" [(ngModel)]="newInventor.amount"  [ngClass]="{ 'red':if_error(formErrors,'amount')?'1px solid red': '' }" />
+    </div>
+    <div class="ui-g-2" >
+      <p>ერთეულის ფასი</p>
+      <p-spinner placeholder="ერთეულის ფასი" size="30" step="0.25"   [(ngModel)]="newInventor.price" [ngClass]="{ 'red':if_error(formErrors,'price')?'1px solid red': '' }" ></p-spinner>
+    </div>
+    <div class="ui-g-2" >
+      <p>სულ ფასი: </p>
+      <input pInputText type="text" placeholder="სულ ფასი" disabled  style="width: 100%; height: 35px" value="{{ newInventor.price * newInventor.amount}}" />
+    </div>
+
+
+    <div class="ui-g-2" *ngIf="newInventor.isCar !==1">
       <div class="ui-inputgroup">
         <table style="width: 100%; border-collapse: collapse" >
           <tr >
@@ -85,10 +102,7 @@
               <p-dropdown [ngClass]="{ 'red':if_error(formErrors,'selectedBarcode')?'1px solid red': '' }" [autoWidth]="true" [options]="BarCodes"   placeholder="RS"  optionLabel="name" [(ngModel)]="newInventor.selectedBarcode"  [showClear]="true" (ngModelChange)="onLastCode()"  [style]="{ width: '90px'}"></p-dropdown>
             </td>
             <td *ngIf="!newInventor.consumption">
-              <input type="text"  pInputText placeholder="შტრიხკოდი" style="width: 100%; height: 33px;" [(ngModel)]="newInventor.barCode"  [ngClass]="{ 'red':if_error(formErrors,'barCode')?'1px solid red': '' }" />
-            </td>
-            <td>
-              <input type="text" pInputText placeholder="რაოდ" style="width: 100%; height: 33px;" [width]="{ 'width': newInventor.consumption? '100%': '100px'}" [(ngModel)]="newInventor.amount"  [ngClass]="{ 'red':if_error(formErrors,'amount')?'1px solid red': '' }" />
+              <input type="text"  pInputText placeholder="შტრ. კოდი" style="width: 100%; height: 33px;" [(ngModel)]="newInventor.barCode"  [ngClass]="{ 'red':if_error(formErrors,'barCode')?'1px solid red': '' }" />
             </td>
             <!--td *ngIf="newInventor.consumption">
               <input type="text" pInputText placeholder="" style="width: 100%; height: 33px;"  [(ngModel)]="newInventor.packageAmount" [ngClass]="{ 'red':if_error(formErrors,'packageAmount')?'1px solid red': '' }">
@@ -96,6 +110,11 @@
           </tr>
         </table>
       </div>
+    </div>
+
+    <div class="ui-g-2"  style="max-width: 200px">
+        <p>ქარხნული ნომერი:</p>
+        <input type="text"  pInputText placeholder="ქარხნული ნომერი" [(ngModel)]="newInventor.factoryNumber" style="height: 35px; width: 100%"/>
     </div>
     <div class="ui-g-2" >
       <p>განზომილების ერთეული</p>
@@ -110,11 +129,6 @@
         <button (click)="itemGroupDialog()" pButton type="button" label="..."></button>
       </div>
     </div>
-    <div class="ui-g-2"  style="max-width: 200px">
-      <label>ქარხნული ნომერი:
-        <input type="text"  pInputText placeholder="" [(ngModel)]="newInventor.factoryNumber" style="height: 35px; width: 100%"/>
-      </label>
-    </div>
     <div class="ui-g-2">
       <p>ინვენტარის ტიპი</p>
       <p-dropdown [style]="{width: '100%'}" [options]="ItemTypes"  [ngClass]="{ 'red':if_error(formErrors,'selectedItemType')?'1px solid red': '' }" placeholder="ტიპი" optionLabel="name" [showClear]="true" [(ngModel)]="newInventor.selectedItemType" ></p-dropdown>
@@ -123,18 +137,13 @@
       <p>ინვენტარის სტატუსი</p>
       <p-dropdown  [style]="{width: '100%'}"  [ngClass]="{ 'red':if_error(formErrors,'selectedItemStatus')?'1px solid red': '' }" [options]="ItemStatus"  placeholder="სტატუსი" optionLabel="name" [showClear]="true" [(ngModel)]="newInventor.selectedItemStatus"></p-dropdown>
     </div>
-    <div class="ui-g-2" >
-      <p>ერთეულის ფასი</p>
-      <p-spinner size="30" step="0.25"   [(ngModel)]="newInventor.price" [ngClass]="{ 'red':if_error(formErrors,'price')?'1px solid red': '' }" ></p-spinner>
-    </div>
-    <div class="ui-g-2" >
-      <p>სულ ფასი: {{ newInventor.price * newInventor.amount}}</p>
-    </div>
+
     <div class="ui-g-12">
         <p-fileUpload name="demo[]"  maxFileSize="1000000" [showUploadButton]="false" chooseLabel="ფაილის არჩევა" cancelLabel="გაუქმება" (onSelect)="onUpload($event)" accept=".xls,.xlsx">
         </p-fileUpload>
     </div>
 </div>
+
   <p-footer>
     <div class="actionButton">
       <div class="buttonBox tf" *ngIf=" this.newInventor.fullBarCode">
