--- a/src/app/components/inventor/inventor-income-dialog/inventor-income-dialog-fields/inventor-income-dialog-fields.component.html
+++ b/src/app/components/inventor/inventor-income-dialog/inventor-income-dialog-fields/inventor-income-dialog-fields.component.html
@@ -2,7 +2,9 @@
 
 <div class="ui-g ui-fluid" style="height: 300px" *ngIf="frustrate">
   <div class="ui-g-12" >
+<!--
     <p class="zednadebisheaderi" style="text-align: center">საწყობის შემოსავლის ელ. ზედდებული  № {{ addon['Left'] }} - {{ addon['Right'] }}</p>
+-->
     <table  style="border-collapse: collapse;" class="table generator-table zdntablehead" cellpadding="5">
       <thead>
       <tr>
@@ -146,8 +148,8 @@
 
   <p-footer>
     <div class="actionButton">
-      <div class="buttonBox tf" *ngIf=" this.newInventor.fullBarCode">
-        <span style="margin-left: 30px;">ბოლო შტრიხკოდი - {{  this.newInventor.fullBarCode}}</span>
+      <div class="buttonBox tf" *ngIf="this.lastBarCodes.length>0">
+        <span style="margin-left: 30px;">ბოლო შტრიხკოდი - {{  this.lastBarCodes[this.lastBarCodes.length-1]['fullBarcode']}}</span>
       </div>
     </div>
     <button *ngIf="frustrate" type="button" pButton icon="pi pi-check" (click)="addNewInventor()" label="დამატება"></button>
