--- a/src/app/components/inventor/inventor-income-dialog/inventor-income-dialog.component.css
+++ b/src/app/components/inventor/inventor-income-dialog/inventor-income-dialog.component.css
@@ -1,3 +1,17 @@
+/* Error: expected selector.
+ *   ,
+ * 1 | /deep/ app-inventor-income-dialog{
+ *   | ^
+ *   '
+ *   inventor-income-dialog.component.scss 1:1  root stylesheet */
 
-
-/*# sourceMappingURL=inventor-income-dialog.component.css.map */
+body::before {
+  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
+      "Droid Sans Mono", monospace, monospace;
+  white-space: pre;
+  display: block;
+  padding: 1em;
+  margin-bottom: 1em;
+  border-bottom: 2px solid black;
+  content: "Error: expected selector.\a   \2577 \a 1 \2502  /deep/ app-inventor-income-dialog{\d\a   \2502  ^\a   \2575 \a   inventor-income-dialog.component.scss 1:1  root stylesheet";
+}
