--- a/src/app/components/inventor/inventor-income-dialog/inventor-income-dialog.component.html
+++ b/src/app/components/inventor/inventor-income-dialog/inventor-income-dialog.component.html
@@ -85,7 +85,7 @@
               <td>{{name(inventor['selectedItemStatus']['name'])}}</td>
               <td>{{name(inventor['price'])}}</td>
               <td>{{inventor['price'] * inventor['amount']}}</td>
-              <td><span (click)="onRemoveInventor(index)"><i class="pi pi-times"></i></span></td>
+              <td><span (click)="onRemoveInventor(index, inventor)"><i class="pi pi-times"></i></span></td>
             </tr>
           </ng-template>
         </p-table>
